<resources>
    <string name="app_name" >Conta-me histórias</string>
    <string name="key_description">Cria narrativas sobre qualquer assunto</string>
    <string name="key_title">conta-me histórias</string>
    <string name="key_search">Pesquisar</string>
    <string name="key_try">Experimentar</string>
    <string name="key_teste">algo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="key_options">
        <u>Opções Avançandas</u>
    </string>
    <string name="country_prompt" translatable="false">Choose number of years</string>
    <string name="lingua">English</string>
    <string name="know_team">conheça a equipa</string>
    <string name="exemplos1">Economia e Atualidade</string>
    <string name="exemplos2">Política, Justiça e Jornalismo</string>
    <string name="exemplos3">Desporto e Cultura</string>
    <string name="sobre">sobre</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="what_is">O que é o Conta-me Histórias?</string>
    <string name="menu_exemplos">Exemplos</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_equipa">Equipa</string>
    <string name="sobreConta">Conta-me Histórias</string>
    <string name="sobreContaT">
        &lt;a href="http://contamehistorias.pt">Conta-me Histórias&lt;/a> <a>é uma plataforma agregadora de notícias que
        oferece aos seus
        utilizadores a possibilidade de navegar e revisitar eventos no passado. Desenvolvido tendo por base as notícias
        preservadas pelo
    </a> &lt;a href="http://arquivo.pt">arquivo da web Portuguesa&lt;/a><a>,</a>
        <a> o Conta-me Histórias pode ser extendido a outros
            conjunto de dados tais como media tradicionais (e.g., Reuters, Bloomberg, etc) ou mesmo social media (e.g.,
            Facebook, Twitter).
        </a>
    </string>
    <string name="sobreFunciona">Como funciona?</string>
    <string name="sobreFuncionaT">
        <a>O Conta-me Histórias obtém informação a partir de arquivos web (e.g., Arquivo.pt) e
            media
            tradicionais (e.g., Reuters, Bloomberg ou Bing News) disponibilizando um serviço de pesquisa “à lá Google”
            que
            oferece aos seus utilizadores uma contextualização histórica de um dado evento (em alguns casos a partir de
            conteúdos atualmente já inexistentes na web convencional). Para selecionar as melhores estórias ao longo do
            tempo, recorremos ao
        </a> &lt;a href="http://yake.inesctec.pt">YAKE!&lt;/a>
        <a>um extrator de palavras relevantes desenvolvido pela nossa equipa de investigação, e
            que neste contexto é utilizado para selecionar os excertos mais importantes de uma notícia (mais
            concretamente
            os seus títulos) ao longo do tempo.
        </a>
    </string>
    <string name="sobreContribuicoes">Contribuições</string>
    <string name="sobreContribuicoesT">Ao longo da última década, temos vindo a assistir a um crescente aumento na
        disponibilização de conteúdos online, colocando novos desafios àqueles que pretendem entender a estória de um
        dado evento. Mais recentemente, fenómenos como o media bias, as fake news e as filter bubbles, vieram adensar
        ainda mais as dificuldades já existentes no acesso transparente à informação.&lt;br/>
    </string>
    <string name="sobreSoftwareT">
        <a>O Conta-me Histórias encontra-se disponível no</a> &lt;a
        href="https://play.google.com/store/apps">Google Play&lt;/a><a>,</a>  &lt;a
        href="http://contamehistorias.pt/arquivopt/">online&lt;/a> <a>
        e no
    </a> &lt;a
        href="https://github.com/LIAAD/TemporalSummarizationFramework">Github&lt;/a><a>,</a>
        <a> plataforma através da qual disponibilizamos uma
            biblioteca Python capaz de ser extendida a diferentes conjuntos de dados e línguas.
        </a>


    </string>
    <string name="sobrePremios">Prémios</string>
    <string name="sobrePremiosT">
        <a>Vencedor do</a> &lt;a
        href="https://sobre.arquivo.pt/en/arquivo-pt-2018-award-winners/">Prémio Arquivo.pt 2018&lt;/a>
        <a>e da Best Demo Presentation na 41st European Conference on Information Retrieval (</a>
        &lt;a href="http://www.ecir2019.org" >ECIR’19&lt;/a><a>).</a>
    </string>
    <string name="sobreReferencias">Referências Bibliográficas</string>
    <string name="sobreReferenciasT01">O Conta-me Histórias é um produto de investigação científica. Por favor cite os
        seguintes trabalhos  se usar o Conta-me Histórias no âmbito de uma publicação científica, projeto de investigação ou produto: &lt;br/>&lt;br/>
    </string>
    <string name="sobreReferenciasT02"><a>Campos, R., Pasquali, A., Jatowt, A., Mangaravite, V., and Jorge, A. (2020).</a>
        <a> Automatic generation of timelines for past events</a>
        <a>. In Gomes, D., et al. (Eds.), The Past Web: exploring web
        archives. Springer Book. Disponível em 2020</a> &lt;br/>&lt;br/>
    </string>
    <string name="sobreReferenciasT03"><a>Pasquali, A., Mangaravite, V., Campos, R., Jorge, A., and Jatowt, A. (2019).
        &lt;a href=" https://link.springer.com/chapter/10.1007/978-3-030-15719-7_34">Interactive System for Automatically Generating Temporal Narratives&lt;/a>. In Azzopardi et al. (Eds.), Lecture Notes
        in Computer Science - Advances in Information Retrieval - 41st European Conference on Information Retrieval
        (ECIR\'19). Cologne, Germany. April 14 – 18. (Vol. 11438 (2019), pp. 251 - 255) </a> &lt;br/>
    </string>
    <string name="sobreContribuicoesT02">O Conta-me Histórias surge neste contexto, como um importante contributo para
        todos aqueles que pretendem ter acesso rápido a uma visão geral de um dado evento criando narrativas resumidas a
        partir de um elevado volume de dados. Oferecemos desta forma aos seus utilizadores (estudantes, jornalistas,
        políticos, investigadores, etc) uma ferramenta privilegiada para o acesso a qualquer tipo de dados que tenha
        sido objeto de cobertura noticiosa.
    </string>
    <string name="equipaTexto">Este projeto foi desenvolvido por investigadores afiliados ao Instituto Politécnico de Tomar, LIAAD
        INESC TEC, Universidade do Porto e Universidade de Kyoto.
    </string>
    <string name="agradecimentos">Agradecimentos</string>
    <string name="institui_es">Instituições</string>
    <string name="instituicao_texto">Colocarem os logotipos das instituições envolvidas (podem vê-los no sobre….no fundo
        da página). Coloquem todos menos o último (o four eyes). Esse é para ser colocado no item a seguir
    </string>
    <string name="financiamento">Financiamento</string>
    <string name="financiamento_texto">Este projeto foi parcialmente financiado pelo projeto “TEC4Growth – Pervasive Intelligence, Enhancers and Proofs of Concept with Industrial Impact/NORTE-01-0145-FEDER-000020” o qual é financiado pelo NORTE 2020, ao abrigo do PORTUGAL 2020, bem como através do European Regional Development Fund (ERDF) através do programa COMPETE 2020 no âmbito do projeto POCI-01-0145-FEDER-006961, e por fundos nacionais da FCT – Fundação da Ciência e Tecnologia ao abrigo do UID/EEA/50014/2013.</string>
    <string name="outros">Outros</string>
    <string name="outros_texto">Um agradecimento especial ao <a href="http://arquivo.pt">Arquivo.pt</a> e
        à sua
        equipa que ao longo dos últimos anos criou uma plataforma de reconhecido valor na preservação dos conteúdos
        digitais portugueses,
        fomentando a partilha do conhecimento e o surgimento de aplicações inovadoras.
    </string>
    <string name="creditos_texto">A app do Conta-me Histórias foi desenvolvida por Simão Samouco e João Campos sob
        supervisão do Professor Ricardo Campos no âmbito do Projeto Final do Curso de Engenharia Informática do
        Instituto Politécnico de Tomar, Portugal
    </string>
    <string name="creditos">Créditos</string>
    <string name="contactos">contactos</string>
    <string name="contactos_texto">Para qualquer questão relacionada com o Conta-me Histórias por favor contacte-nos
        através do seguinte email:
    </string>
    <string name="contactos_menu">Contactos</string>
    <string name="cargo_resea_prof">PROFESSOR E INVESTIGADOR</string>
    <string name="cargo_soft_resea">DESENVOLVEDOR DE SOFTWARE E INVESTIGADOR</string>
    <string name="cargo_commuticaions">COMUNICAÇÕES</string>
    <string name="mobile_developer">DESENVOLVEDOR MÓVEL</string>
    <string name="creditos_frag">créditos</string>
    <string name="copiar_mail">Copiar Mail</string>
    <string name="liaad_url">https://www.inesctec.pt/pt</string>
    <string name="search_box">Pesquisar</string>
    <string-array name="country_arrays">
        <item>Últimos 5 anos</item>
        <item>Últimos 10 anos</item>
        <item>Últimos 15 anos</item>
        <item>Últimos 20 anos</item>
    </string-array>
    <string name="five_years">Últimos 5 anos</string>
    <string name="ten_years">Últimos 10 anos</string>
    <string name="fifteen_years">Últimos 15 anos</string>
    <string name="twenty_years">Últimos 20 anos</string>
    <string name="origem_nome">Origem do nome</string>
    <string name="mail_foi_copiado">" O email foi copiado."</string>
    <string name="loading_wordcloud">A Worldcloud está a carregar...</string>
    <string name="helpere">
        <a href="http://www.google.com">Google</a>
    </string>
    <string name="narrativa">Narrativa</string>
    <string name="termos_relacionas">Termos Relacionados</string>
    <string name="error_main_text">Sistema com muita procura</string>
    <string name="error_text_secondary">Já estamos a trabalhar nisso e esperamos que seja temporário. Por favor tente
        novamente mais tarde
    </string>
    <string name="button_voltar">Tentar novamente</string>
    <string name="media_pt_titulo1" translatable="false"> &lt;a href="https://www.tsf.pt/sociedade/ciencia-e-tecnologia/interior/conta-me-historias-xutos-inspiram-projeto-premiado-9554297.html" >\"Conta-me Histórias.\" Xutos inspiram projeto premiado&lt;/a></string>
    <string name="media_pt_titulo2" translatable="false"> &lt;a href="http://www.90segundosdeciencia.pt/episodes/ep-580-ricardo-campos/" > Ep. 580 Ricardo Campos – “Conta-me histórias”, o arquivo de notícias que permite viajar pelo tempo &lt;/a></string>
    <string name="media_pt_titulo3" translatable="false"> &lt;a href="https://soundcloud.com/user-985956038/daniel-gomes-explica-como-participar-no-premio" > Conta-me Histórias na Rádio Comercial by Daniel Gomes (Gestor Arquivo.pt) &lt;/a></string>
    <string name="media_pt_titulo4" translatable="false"> &lt;a href="https://www.fccn.pt/conhecidos-os-vencedores-dos-premios-arquivo-pt" > Conhecidos os Vencedores dos Prémios Arquivo.pt 2018 &lt;/a></string>
    <string name="media_pt_titulo5" translatable="false"> &lt;a href="https://24.sapo.pt/tecnologia/artigos/conta-me-historias-uma-plataforma-onde-as-noticias-tem-memoria" > Conta-me Histórias. Uma plataforma onde as notícias têm memória  &lt;/a></string>
    <string name="media_pt_titulo6" translatable="false"> &lt;a href="https://www.publico.pt/2019/01/24/ciencia/noticia/arquivopt-viagem-web-portuguesa-premeia-projectos-inovadores-1858823" > Arquivo.pt: uma viagem pela Web portuguesa que premeia projectos inovadores &lt;/a></string>
    <string name="error_text_no_results">Não foram encontrados resultados suficientes</string>
    <string name="error_text_procurar_outro_tema">Pesquise por um outro tópico à sua escolha</string>
</resources>