<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context=".Fragments.FragmentAgradecimentos">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/agradecimentos"
                  android:gravity="center"
                  android:textSize="35sp"
                  android:layout_margin="20dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/institui_es"
                  android:layout_marginBottom="8dp"
                  android:layout_marginTop="3dp"
                  android:layout_marginLeft="25dp"
                  android:layout_marginRight="25dp"
                  android:textSize="25sp"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintEnd_toStartOf="@id/ola2"
                       app:layout_constraintBottom_toTopOf="@id/ola3"
                       android:id="@+id/ola1"
                       android:background="@drawable/logo_ipt"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintStart_toEndOf="@id/ola1"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintBottom_toTopOf="@id/ola3"
                       android:id="@+id/ola2"
                       android:background="@drawable/fcup"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/ola1"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintEnd_toStartOf="@id/ola4"
                       android:id="@+id/ola3"
                       android:background="@drawable/kyoto"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/ola2"
                       app:layout_constraintStart_toEndOf="@id/ola3"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       android:id="@+id/ola4"
                       android:background="@drawable/liaad"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/financiamento"
                  android:layout_marginBottom="8dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginLeft="25dp"
                  android:layout_marginRight="25dp"
                  android:textSize="25sp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="18dp"
                  android:layout_marginRight="18dp"
                  android:textSize="15sp"
                  android:text="@string/financiamento_texto"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/outros"
                  android:layout_marginTop="15dp"
                  android:layout_marginBottom="8dp"
                  android:layout_marginLeft="25dp"
                  android:layout_marginRight="25dp"
                  android:textSize="25sp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="18dp"
                  android:layout_marginRight="18dp"
                  android:textSize="15sp"
                  android:text="@string/outros_texto"/>

    </LinearLayout>


</ScrollView>