<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain"
        android:padding="20dp"
        tools:context=".MainActivity">


    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_title"
            android:textSize="35sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeMaxTextSize="50sp"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/key_description"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button android:id="@+id/search_button"
            android:layout_marginTop="25dp"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/initial_page_button"
            app:layout_constraintTop_toBottomOf="@id/descricao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Btn_try"
            android:text="@string/key_search"/>

    <Button android:id="@+id/Btn_try"
            android:layout_marginTop="30dp"
            android:onClick="random"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/initial_page_button"
            app:layout_constraintTop_toBottomOf="@id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/key_try"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Btn_try">


        <ImageView android:id="@+id/england"
                   android:layout_width="60dp"
                   android:layout_height="40dp"
                   android:layout_marginEnd="20dp"
                   android:layout_marginRight="20dp"
                   android:background="@drawable/en_en"/>

        <ImageView android:id="@+id/portugal"
                   android:layout_width="60dp"
                   android:layout_height="40dp"
                   android:background="@drawable/pt_pt"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>