<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintclick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain"
        android:padding="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        tools:context=".MainActivity">


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toTopOf="@id/titulo"
              app:layout_constraintStart_toStartOf="parent"
              android:fontFamily="@font/nexa_bold"
              app:layout_constraintEnd_toEndOf="parent"
              android:textColor="#FFFFFF"
              app:layout_constraintVertical_bias="0.1"
              android:text="@string/pesquisar" android:gravity="center" android:textSize="40sp"/>

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_title"
            android:textSize="35sp"
            app:layout_constraintVertical_bias="0.3"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeMaxTextSize="50sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nexa_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:paddingTop="10dp"
            android:text="@string/key_description"
            android:fontFamily="@font/nexa_light"
            android:textSize="18sp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>




    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:id="@+id/constraint"
                                                       app:layout_constraintTop_toBottomOf="@id/descricao"
                                                       android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/searchbar"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:paddingStart="20dp"
                  android:paddingLeft="20dp"
                  android:background="@drawable/edit_text_custom"
                  android:textColorHint="@drawable/color_state_list"
                  android:textColor="@drawable/color_state_list"
                  android:maxLines="1"
                  android:inputType="text"
                  android:gravity="center_vertical"
                  app:layout_constraintTop_toTopOf="parent"
                  android:fontFamily="@font/nexa_bold"
                  android:hint="@string/search_box"
        />

        <ImageView
                app:layout_constraintEnd_toEndOf="@id/searchbar"
                android:id="@+id/imagePesquisa"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/ic_search_blue_24dp"
                android:layout_centerVertical="true"
                android:text="Button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:paddingTop="10dp"
              android:id="@+id/advancedoptions"
              android:textColor="#FFFFFF"
              android:clickable="true"
              android:fontFamily="@font/nexa_light"
              app:layout_constraintTop_toBottomOf="@id/constraint"
              android:paddingBottom="20dp"
              android:text="@string/key_options"
    />
    <LinearLayout app:layout_constraintTop_toBottomOf="@id/advancedoptions"
                  android:id="@+id/linear_visibility"
                  android:visibility="invisible"
                  android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:overlapAnchor="false"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dropdown" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>